kubfile/ghs-deploy.yaml
# Description: This file contains the deployment and service configuration for the nginx application.
# The deployment creates two replicas of the nginx container and the service exposes the application on port 80.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghs-web
  labels:
    app: ghs-web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ghs-web
  template:
    metadata:
      labels:
        app: ghs-web
    spec:
      containers:
      - name: nginx
        image: docker.io/library/ghs-nginx-app7:latest # change to your image name
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "64Mi"
            cpu: "250m"
