kubfile/ghs-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghs-service
  labels:
    app: ghs-web
spec:
  type: NodePort
  selector:
    app: ghs-web
  ports:
  - port: 80
    targetPort: 80
    nodePort: 31000
